# Ejercicios-Compi2

./: README.md
Mis_Recursos/: Grammar.txt  RegexList.txt
Mis_Recursos/Ejemplo1/: Ejemplo1_Flex.l  counter  counter.cpp
Mis_Recursos/Ejemplo2/: CMakeLists.txt  sample1.l
Mis_Recursos/Ejemplo2/Ejemplo2_V2_Inge/: input.txt  main.cpp  sample1.l  tokens.h
Mis_Recursos/Ejemplo2/Ejemplo2_V2_Inge/EjemploConEnumClass/: CMakeLists.txt  main.cpp  sample1.l  tokens.h
Mis_Recursos/Ejemplo3/ExpresionesAritmeticas/: CMakeLists.txt  grammar.txt  input.txt  input1.txt  main.cpp  parser.cpp  parser.h  sample1.l  tokens.h
Mis_Recursos/Ejemplo4_Bison/: expr.l  expr.y  input.txt  input2.txt  main.cpp
Mis_Recursos/Ejemplo5_BisonCPP/: BisonCPP.cpp  CMakeLists.txt  expr.l  expr.y  input.txt  main.cpp
Mis_Recursos/Ejemplo6_TreeCC/: CMakeLists.txt  Teoria.txt  expr.l  expr.tc  expr.y  input.txt  main.cpp
